working on event section